js/js.translator/testData/incremental/invalidation/mainFunction/main/l.5.kt
package foo

import foo.bar.ok

fun main() {
    ok = "OK2"
}